Agrege las imagenes al index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Modifico esto para poder hacer un nuevo commit</h1>
+    <img src="./img/amPAve6_460s.jpg" alt="">
+    <img src="./img/hqdefault.jpg" alt="">
+    <img src="./img/r_1840117_3JUPn.jpg" alt="">
+    <img src="./img/thumb_git-reset-–hard-68134069.png" alt="">
 </body>
 </html>
