Le agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <img src="./img/hqdefault.jpg" alt="">
     <img src="./img/r_1840117_3JUPn.jpg" alt="">
     <img src="./img/thumb_git-reset-–hard-68134069.png" alt="">
+
+    <p>Sitio de memes.</p>
 </body>
 </html>
