--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <img src="./img/thumb_git-reset-–hard-68134069.png" alt="">
 
     <p>Sitio de memes.</p>
+
+    <h2>Subtitulo</h2>
 </body>
 </html>
