--- a/index.html
+++ b/index.html
@@ -4,18 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Sitio Muy serio</title>
 </head>
 <body>
-    <h1>Modifico esto para poder hacer un nuevo commit</h1>
-    <img src="./img/amPAve6_460s.jpg" alt="">
-    <img src="./img/hqdefault.jpg" alt="">
-    <img src="./img/r_1840117_3JUPn.jpg" alt="">
-    <img src="./img/thumb_git-reset-–hard-68134069.png" alt="">
-
-    <p>Sitio de memes.</p>
-
-    <h2>Subtitulo</h2>
-    <p>Aca va un titulo</p>
+    <div class="container-fluid">
+        <header class="header row">
+            <nav class="navbar navbar-expand-lg navbar-dark header__nav">
+                <div class="container-fluid header__nav__container">
+                  <a class="navbar-brand" href="#">Sitio Serio</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse header__nav__container__rightMenu" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link header__nav__container" href="#">Features</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+        <main class="row">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/branch.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/7670f2e1668f4583a3bf76f5f8b74e5c.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+        </main>
+        <section class="row">
+            <div class="col">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, esse inventore reprehenderit qui illo expedita quia aliquam hic molestias vero.</p>
+            </div>
+            <div class="col-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum esse temporibus commodi tempore libero iusto placeat omnis neque delectus minus veniam, fugiat enim, veritatis hic? Corrupti perferendis deleniti pariatur tempora!</p>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis maxime numquam, neque quis nisi nemo exercitationem reiciendis cumque libero rem.</p>
+            </div>
+        </section>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
